--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.feature.2d": "2.0.0",
-    "com.unity.ide.rider": "3.0.27",
-    "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.test-framework": "1.4.2",
-    "com.unity.timeline": "1.8.6",
+    "com.unity.collab-proxy": "2.9.3",
+    "com.unity.feature.2d": "2.0.1",
+    "com.unity.ide.rider": "3.0.38",
+    "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.localization": "1.5.7",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.test-framework": "1.6.0",
+    "com.unity.timeline": "1.8.9",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.1",
+    "com.unity.visualscripting": "1.9.7",
     "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.modules.adaptiveperformance": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -36,6 +38,7 @@
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vectorgraphics": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
